Closed
Bug 90159
Opened 24 years ago
Closed 24 years ago
Uninstall does not complete when run while Mozilla/N6 running in turbo mode
Categories
(SeaMonkey :: Installer, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.4
People
(Reporter: agracebush, Assigned: ssu0262)
References
Details
(Whiteboard: trunk only)
Attachments
(4 files)
|
818 bytes,
patch
|
Details | Diff | Splinter Review | |
|
4.05 KB,
patch
|
Details | Diff | Splinter Review | |
|
1.01 KB,
patch
|
Details | Diff | Splinter Review | |
|
5.54 KB,
patch
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Install Mozilla (build 2001071004)
2. Run in turbo mode
3. exit mozilla using [x] in upper right corner of browser
4. Add/Remove Programs, choose mozilla 9.2
expected results: mozilla.exe would shut down, uninstall would proceed and
complete
actual results: mozilla.exe continued to run, uninstall proceeded but did not
complete - 13/24 files remain 3 of 7 directories
(need to get fill diff program setup on this machine)
mozilla still launches but I cannot pinpoint where it might fail with missing
files
patch coming up
I will attach trunk patches after these have been checked into the branch.
| Assignee | ||
Comment 10•24 years ago
|
||
I've also got approval from Montse for adding a new dialog to the uninstaller
(the trunk patches will do that) to both the trunk and branch trees. This new
dialog is just a MessageBox(). The string will be added to uninstall.it (which
gets generated into uninstall.ini).
seeking r= and sr= for the trunk patches now.
Comment 11•24 years ago
|
||
r=syd
Comment 12•24 years ago
|
||
r=dveditz for the trunk patches
Comment 13•24 years ago
|
||
sr=mscott for the 2 patches from 7/11.
| Assignee | ||
Comment 14•24 years ago
|
||
trunk patches checked in to the branch only.
I will check the trunk patches into the trunk one the tree opens.
Keywords: vbranch
| Assignee | ||
Comment 15•24 years ago
|
||
trunk patches now checked into the trunk as well. marking this bug fixed.
| Reporter | ||
Comment 16•24 years ago
|
||
verified on branch build 2001071613
adding vtrunk as reminder to verify on trunk
Keywords: vtrunk
| Reporter | ||
Comment 17•24 years ago
|
||
reopening for trunk only-
this checks out on branch and mozilla builds but not build 2001072005 trunk
partial uninstall, turbo icon shown in tray, after uninstall finishes (leaving
behind a subset of files) it cannot be launched by doubleclicking on icon or
from the command line and of course the N6 icon is gone too.
removed PDT+ as this is fixed on branch
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Whiteboard: [PDT+] → trunk only
Updated•24 years ago
|
Target Milestone: mozilla0.9.3 → mozilla0.9.4
| Assignee | ||
Comment 18•24 years ago
|
||
hmmm... I just tried today's ns trunk build from 2001-08-21-11 and it's working
great.
Grace, can you verify this again. If you still see the problem, please let me
know (and reopen this bug). I'll swing by to take a look too.
Status: REOPENED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
| Assignee | ||
Comment 19•24 years ago
|
||
just tried today's mozilla build. it's not working. reopening bug.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 20•24 years ago
|
||
False alarm. I had an old copy of MozillaUninstall.exe in the same dir as
mozilla-win32-installer.exe. Today's mozilla trunk build also works fine.
Status: REOPENED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 21•24 years ago
|
||
verified with mozilla build 20010822
and N6 trunk build 2001082203
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•