fixing bug 90159 - Uninstall does not complete when run while Mozilla,N6 running in turbo mode. r=syd,dveditz sr=mscott.  affects windows platforms only