xpinstall/wizard/windows/uninstall/extra.c
@@ -836,6 +836,78 @@ void ParseCommandLine(LPSTR lpszCmdLine)
   }
 }
 
+int PreCheckInstance(char *szSection, char *szIniFile)
+{
+  char  szBuf[MAX_BUF];
+  char  szKey[MAX_BUF];
+  char  szName[MAX_BUF];
+  char  szParameter[MAX_BUF];
+  char  szPath[MAX_BUF];
+  char  szFile[MAX_BUF];
+  char  *ptrName = NULL;
+  HKEY  hkeyRoot;
+  int   iRv = WIZ_OK;
+
+  /* Read the win reg key path */
+  GetPrivateProfileString(szSection,
+                          "Extra Cmd Reg Key",
+                          "",
+                          szKey,
+                          sizeof(szKey),
+                          szIniFile);
+  if(*szKey == '\0')
+    return(iRv);
+
+  /* Read the win reg root key */
+  GetPrivateProfileString(szSection,
+                          "Extra Cmd Reg Key Root",
+                          "",
+                          szBuf,
+                          sizeof(szBuf),
+                          szIniFile);
+  if(*szBuf == '\0')
+    return(iRv);
+  hkeyRoot = ParseRootKey(szBuf);
+
+  /* Read the win reg name value */
+  GetPrivateProfileString(szSection,
+                          "Extra Cmd Reg Name",
+                          "",
+                          szName,
+                          sizeof(szName),
+                          szIniFile);
+  if(*szName == '\0')
+    ptrName = NULL;
+  else
+    ptrName = szName;
+
+  /* Read the parameter to use for quitting the browser's turbo mode */
+  GetPrivateProfileString(szSection,
+                          "Extra Cmd Parameter",
+                          "",
+                          szParameter,
+                          sizeof(szParameter),
+                          szIniFile);
+
+  /* Read the win reg key that contains the path to the browser */
+  GetWinReg(hkeyRoot, szKey, ptrName, szFile, sizeof(szFile));
+  ParsePath(szFile, szPath, sizeof(szPath), PP_PATH_ONLY);
+
+  /* Make sure the file exists */
+  if(FileExists(szFile))
+  {
+    /* Run the file */
+    WinSpawn(szFile, szParameter, szPath, SW_HIDE, TRUE);
+
+    /* Even though WinSpawn is suppose to wait for the app to finish, this
+     * does not really work that way for trying to quit the browser when
+     * it's in turbo mode, so we wait 2 secs for it to complete. */
+    Delay(2);
+  }
+
+  return(iRv);
+}
+
 HRESULT CheckInstances()
 {
   char  szSection[MAX_BUF];
@@ -886,23 +958,47 @@ HRESULT CheckInstances()
       else
         szWN = szWindowName;
 
-      if((hwndFW = FindWindow(szClassName, szWN)) != NULL)
+      /* If an instance is found, call PreCheckInstance first. */
+      if((hwndFW = FindWindow(szCN, szWN)) != NULL)
+        PreCheckInstance(szSection, szFileIniUninstall);
+
+      if((hwndFW = FindWindow(szCN, szWN)) != NULL)
       {
         if(*szMessage != '\0')
         {
-          if((ugUninstall.dwMode != SILENT) && (ugUninstall.dwMode != AUTO))
+          switch(ugUninstall.dwMode)
           {
-            MessageBox(hWndMain, szMessage, NULL, MB_ICONEXCLAMATION);
-          }
-          else if(ugUninstall.dwMode == AUTO)
-          {
-            ShowMessage(szMessage, TRUE);
-            Delay(5);
-            ShowMessage(szMessage, FALSE);
-          }
-         }
+            case NORMAL:
+              switch(MessageBox(hWndMain, szMessage, NULL, MB_ICONEXCLAMATION | MB_RETRYCANCEL))
+              {
+                case IDCANCEL:
+                  /* User selected to cancel Setup */
+                  return(TRUE);
 
-        return(TRUE);
+                case IDRETRY:
+                  /* User selected to retry.  Reset counter */
+                  iIndex = -1;
+                  break;
+              }
+              break;
+
+            case AUTO:
+              ShowMessage(szMessage, TRUE);
+              Delay(5);
+              ShowMessage(szMessage, FALSE);
+
+              /* Setup mode is AUTO.  Show message, timeout, then cancel because we can't allow user to continue */
+              return(TRUE);
+
+            case SILENT:
+              return(TRUE);
+          }
+        }
+        else
+        {
+          /* No message to display.  Assume cancel because we can't allow user to continue */
+          return(TRUE);
+        }
       }
     }
   }
